@@ -54,7 +54,9 @@ APS_MAX_REMOTE_FILESIZE = 26214400
 ## Main variables
 
 ADM_GROUP = adm
+IMSCP_USER = imscp
 IMSCP_GROUP = imscp
+IMSCP_HOMEDIR = /var/local/imscp
 CONF_DIR = /etc/imscp
 LOG_DIR = /var/log/imscp
 ROOT_DIR = /var/www/imscp
@@ -64,10 +66,7 @@ GUI_ROOT_DIR = /var/www/imscp/gui
 GUI_PUBLIC_DIR = /var/www/imscp/gui/public
 ENGINE_ROOT_DIR = /var/www/imscp/engine
 PLUGINS_DIR = /var/www/imscp/gui/plugins
-CACHE_DATA_DIR = /var/cache/imscp
-VARIABLE_DATA_DIR = /var/local/imscp
 USER_WEB_DIR = /var/www/virtual
-
 DISTRO_OPENSSL_CNF = /etc/ssl/openssl.cnf
 DISTRO_CA_BUNDLE = /etc/ssl/certs/ca-certificates.crt
 DISTRO_CA_PATH = /etc/ssl/certs
@@ -164,6 +163,9 @@ GUI_BYPASS_BRUTEFORCE = 0
 # Debug Mode (e.g. for developers)
 # Options: 0 = off, 1 = on
 DEBUG = 0
+
+# Depreciated variables (only keept for upgrade process)
+CACHE_DATA_DIR = /var/cache/imscp
 
 # Servers
 # Please, do not change these parameters manually
